--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,5 +1,8 @@
 FROM php:7.4.3-fpm-alpine3.11
 
+RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
+
+# Start PHP-FPM
 # Copy the application code
 COPY . /app
 
